Thu Feb 14 14:28:58 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/orbsvcs/Naming/Storable.h:
        * orbsvcs/orbsvcs/Naming/Storable.inl:

          Added initialization of type_ member to fix Coverity issue.

        * tests/Var_Deref:
        * tests/Var_Deref/README.txt:
        * tests/Var_Deref/Test.idl:
        * tests/Var_Deref/Var_Deref.mpc:
        * tests/Var_Deref/var_deref.cpp:

          Removed these files.  No longer needed since this feature
          was removed in the previous commit.

Wed Feb 13 19:25:06 UTC 2013  "Kevin Stanley"  <stanleyk@ociweb.com>

        * tao/Seq_Var_T.h:
        * tao/Seq_Var_T.inl:

          Backed out change which moved explicit point dereference operation
          from variable length vars to base so it can be applied to vars for
          fixed length types. Was causing issues with MSVC compilers related
          to ambiguity.

Wed Feb 13 18:28:34 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.h:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.cpp:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Round_Robin.h:
        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
        * tests/Storable/Savable.h:

          Changes to get to compile when versioned namespaces are used.

Wed Feb 13 17:18:10 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * bin/tao_orb_tests.lst:

          Don't run ORB_ThreadPool test on CORBA_E_COMPACT.

        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.cpp:

          Added null test for file_lock_ to fix Coverity Issues:
          972905, 972903.

        * tests/Dynamic_TP/ORB_ThreadPool/ORB_ThreadPool.mpc:

          Avoid building ORB_ThreadPool under corba_e_compact.

Wed Feb 13 15:05:15 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.cpp:

          Added check for null Object Group being provided. Will